feat: client structure

--- a/packages/svrx-ui-client/src/App.css
+++ b/packages/svrx-ui-client/src/App.css
@@ -1,3 +1,16 @@
 .App {
   text-align: center;
 }
+
+.header {
+  color: white;
+}
+
+.middle {
+  text-align: left;
+}
+
+.content {
+  padding: 20px;
+  background: white;
+}
